--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "MERN Shopping App",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node",
     "server": "nodemon backend/server",
